# tag-stiller

./: .gitignore  README.md  TagStiller.spec  pyproject.toml  run.sh
.github/workflows/: tests.yml  windows-build.yml
app/: __init__.py  cli.py  main.py
app/audio/: __init__.py  artwork.py  scanner.py  tags.py
app/gui/: __init__.py  main_window.py  worker.py
app/matching/: __init__.py  matcher.py
app/models/: __init__.py  entities.py
app/providers/: __init__.py  base.py  html_parser.py  playwright_provider.py
app/services/: __init__.py  album_io.py  backup.py  local_editing.py  rename_templates.py  renaming.py  tagging.py  updater.py
app/utils/: drop.py  logging.py  text.py
tests/: test_artwork.py  test_core.py  test_drop.py  test_live_site.py  test_local_editing.py  test_rename_templates.py  test_renaming.py  test_services.py  test_updater.py
tests/fixtures/: casa_album.html
