[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagstiller"
version = "1.4.0"
description = "Безопасное заполнение аудиотегов по страницам Casa Musica"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "mutagen>=1.47,<2",
  "playwright>=1.49,<2",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "pyinstaller>=6.11,<7"]

[project.scripts]
tagstiller = "app.main:main"
tagstiller-cli = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["live: обращается к реальному сайту (отключён по умолчанию)"]
